--- a/onshape_to_robot/templates/view_robot.launch.py.jinja
+++ b/onshape_to_robot/templates/view_robot.launch.py.jinja
@@ -2,7 +2,11 @@
 # -*- coding: utf-8 -*-
 
 from launch import LaunchDescription
-from launch.substitutions import Command, FindExecutable, PathJoinSubstitution
+from launch.substitutions import (
+    Command,
+    FindExecutable,
+    PathJoinSubstitution,
+)
 from launch_ros.actions import Node
 from launch_ros.substitutions import FindPackageShare
 
@@ -24,7 +28,9 @@ def generate_launch_description():
         parameters=[robot_description],
     )
 
-    rviz_config_file = PathJoinSubstitution([package_share, "rviz", "view_robot.rviz"])
+    rviz_config_file = PathJoinSubstitution(
+        [package_share, "rviz", "view_robot.rviz"]
+    )
     rviz_node = Node(
         package="rviz2",
         executable="rviz2",
@@ -34,7 +40,8 @@ def generate_launch_description():
     )
 
     joint_state_publisher_node = Node(
-        package="joint_state_publisher_gui", executable="joint_state_publisher_gui"
+        package="joint_state_publisher_gui",
+        executable="joint_state_publisher_gui",
     )
 
     static_tf_node = Node(
@@ -42,7 +49,16 @@ def generate_launch_description():
         executable="static_transform_publisher",
         name="static_transform_publisher",
         output="log",
-        arguments=["0.0", "0.0", "0.0", "0.0", "0.0", "0.0", "world", "base_link"],
+        arguments=[
+            "0.0",
+            "0.0",
+            "0.0",
+            "0.0",
+            "0.0",
+            "0.0",
+            "world",
+            "base_link",
+        ],
     )
 
     return LaunchDescription(
