--- a/onshape_to_robot/templates/CMakeLists.txt.jinja
+++ b/onshape_to_robot/templates/CMakeLists.txt.jinja
@@ -4,8 +4,16 @@ project({{ package_name }})
 find_package(ament_cmake REQUIRED)
 {% else %}
 find_package(catkin REQUIRED)
+catkin_add_env_hooks(
+  robot
+  SHELLS
+  bash
+  DIRECTORY
+  ${CMAKE_CURRENT_SOURCE_DIR}/env-hooks
+)
 {% endif %}
-install(DIRECTORY launch meshes rviz urdf DESTINATION share/${PROJECT_NAME})
+
+install(DIRECTORY launch media meshes rviz urdf DESTINATION share/${PROJECT_NAME})
 {% if package_type == "ament" %}
 ament_package()
 {% else %}
